--- a/trunk/poc2/monografia/monografia.bib
+++ b/trunk/poc2/monografia/monografia.bib
@@ -11,9 +11,30 @@
 	priority = {2},
 	publisher = {{W. H. Freeman}},
 	title = {The Fractal Geometry of Nature},
-	url = {http://www.amazon.ca/exec/obidos/redirect?tag=citeulike09-20\&amp;path=ASIN/0716711869},
 	year = {1982}
 }
+
+@InProceedings{Schneider:2006:FractalTerrain,
+  author =       "Jens Schneider and Tobias Boldte and Ruediger Westermann",
+  title =        "Real-Time Editing, Synthesis, and Rendering of Infinite Landscapes on {GPU}s",
+  booktitle =    "Vision, Modeling and Visualization 2006",
+  year =         "2006"
+}
+
+
+@book{gpugems3,
+	author = {Nguyen, Hubert },
+	howpublished = {Hardcover},
+	isbn = {0321515269},
+	month = {August},
+	posted-at = {2009-05-26 18:44:45},
+	priority = {2},
+	publisher = {Addison-Wesley Professional},
+	title = {GPU Gems 3},
+	year = {2007}
+}
+
+	
 
 @book{lsystem,
  author = {Przemyslaw Prusinkiewicz and Aristid Lindenmayer},
