--- a/trunk/poc2/monografia/introducao.tex
+++ b/trunk/poc2/monografia/introducao.tex
@@ -1,5 +1,5 @@
 \chapter{INTRODUÇÃO}
-
+\label{introducao}
 
 \section{Visão geral}
 A geração procedural de modelos é uma área da Ciência da Computação que propõe que modelos gráficos tridimensionais (representação em polígonos de algum objeto) possam ser gerados através de rotinas e algoritmos. Tal técnica vem se tornando bastante popular nos últimos tempos, tendo em vista que, com o crescimento da indústria do entretenimento, há uma necessidade de se construir modelos cada vez maiores e com um grande nível de detalhe. A técnica de geração procedural vem então como uma alternativa à utilização do trabalho de artistas e modeladores na criação de modelos tridimensionais.
@@ -22,5 +22,9 @@ A segunda parte, geração de terrenos proceduralmente, busca, através de algoritm
 
 
 Este trabalho irá implementar soluções para a geração procedural de terrenos na \emph{GPU} e também na \emph{CPU}, com o objetivo de comparar a eficiência e velocidade das duas abordagens.
+
+
+\section{Organização}
+Este trabalho está organizado da seguinte maneira. O Capítulo \ref{introducao} apresenta uma breve introdução e objetivos. O Capítulo \ref{referencialTeorico} apresenta o referencial teórico pertinente a este trabalho. O Capítulo \ref{metodologia} mostra a metodologia envolvida. O Capítulo \ref{resultados} apresenta os resultados obtidos e, finalmente, o Capítulo \ref{conclusao} mostra a conclusão do trabalho e propostas para trabalhos futuros.
 
 
