--- a/trunk/poc2/monografia/metodologia.tex
+++ b/trunk/poc2/monografia/metodologia.tex
@@ -1,16 +1,21 @@
 \chapter{METODOLOGIA}
+\label{metodologia}
 
 \section{Tipo de Pesquisa}
-O trabalho proposto é uma pesquisa de natureza aplicada, pois busca aplicar um conhecimento teórico (técnicas de geração procedural) e obter um resultado prático na forma de um arcabouço e tem um  objetivo exploratório. A pesquisa se dá em laboratório, pois se trata de um ambiente controlado.
+O trabalho proposto é uma pesquisa de natureza aplicada, pois busca aplicar um conhecimento teórico (técnicas de geração procedural na \emph{GPU}) e obter um resultado prático na forma de um sistema e tem um  objetivo exploratório. A pesquisa se dá em laboratório, pois se trata de um ambiente controlado.
 
 
 \section{Procedimentos metodológicos}
 
-O primeiro passo do trabalho foi a escolha de uma \emph{Application Programming Interface} (\sigla{API}{Application Programming Interface}). Por se tratar de uma plataforma aberta e já estudada em matérias durante o curso, o \emph{OpenGL} foi escolhido, juntamente com a linguagem C++. Além disso, essa API oferece algumas extensões que permitem maximizar a performance do sistema, como o a estrutura \emph{Vertex Buffer Object} (\sigla{VBO}{Vertex Buffer Object}), que armazena os vértices do modelo 3D diretamente na memória da \emph{Graphics Processing Unit} (\sigla{GPU}{Graphics Processing Unit}), diminuindo o número de chamadas para a renderização. O \emph{OpenGL} também possui algumas bibliotecas, como o \emph{GLFW} \cite{glfw}, para tratamento de eventos do mouse e teclado, o \emph{AntTweakBar} \cite{anttweakbar}, para a construção de interfaces gráficas e o \emph{DevIL} \cite{devil} para a leitura de imagens.
+O primeiro passo do trabalho foi a escolha de uma \sigla{API}{Application Programming Interface}. Por se tratar de uma plataforma aberta e já estudada em matérias durante o curso, o \emph{OpenGL} foi escolhido, juntamente com a linguagem C++. Além disso, essa API oferece algumas extensões que permitem maximizar a performance do sistema, como o a estrutura \sigla{VBO}{Vertex Buffer Object}, que armazena os vértices do modelo 3D diretamente na memória da \emph{Graphics Processing Unit} (\sigla{GPU}{Graphics Processing Unit}), diminuindo o número de chamadas para a renderização, e o \sigla{FBO}{Frame Buffer Object}, que permite renderizar o resultado de uma certa computação diretamente em uma textura.
 
-O desenvolvimento do arcabouço seguiu técnicas de \emph{Programação Orientada a Objetos} (\sigla{POO}{Programação Orientada a Objetos}), sempre com a intenção de deixar o sistema o mais flexível possível. Um estudo do funcionamento de \emph{frameworks} também foi necessário, envolvendo questões como \emph{hot spots}, \emph{frozen spots}, caixa-preta, caixa-branca \cite{framework}.
+Durante este tempo de pesquisa, foi considerado a utilização da plataforma \emph{CUDA}, da \emph{NVidia}, destinada especificamente para o uso da \emph{GPU} em computação de propósito geral. Porém, ele foi descartado, uma vez que seu uso é limitado às placas \emph{NVidia} e, de uma maneira geral, tudo que é proposto aqui pode ser feito com o uso de plataformas abertas.
 
-Foi pesquisado também diversas técnicas procedurais envolvidas na geração de terrenos, como, por exemplo, ruído de Perlin, algoritmo fractal plasma, bem como algumas sistemas que oferecem soluções ligadas à geração procedural, como o \emph{CityEngine} \cite{citygen} e o \emph{MojoWorld} \cite{mojoworld}.
 
-Por fim, foi construído um arcabouço que servirá como base para a implementação de algoritmos de geração procedural de terrenos, e uma \emph{interface} que permita uma maior interação com o usuário. Além disso, também foi construído um grafo de cena para a organização dos terrenos. Os detalhes serão apresentados na próxima seção.
+O segundo passo foi pesquisar diversas técnicas procedurais envolvidas na geração de terrenos, bem como algumas sistemas que oferecem soluções ligadas à geração procedural, como o \emph{CityEngine} \cite{citygen} e o \emph{MojoWorld} \cite{mojoworld}. Foi pesquisado também trabalhos relacionados à geração procedural de terrenos na \emph{GPU}.
+
+
+O terceiro passo envolveu a construção de um sistema que permite a geração procedural de terrenos tanto na \emph{GPU} quanto na \emph{CPU}), sendo possível navegar pelo cenário de maneira intuitiva.
+
+Finalmente, foram executados testes comparativos entre a geração procedural na \emph{GPU} e na \emph{CPU}, a fim de observar os benefícios obtidos em cada arquitetura.
 
